# whisper-echo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
nix/pkgs/msgpack-cpp/: default.nix
nix/pkgs/whisper-cpp-dev/: default.nix
whisper_echo/: CMakeLists.txt  whisper_context.cc  whisper_context.h  whisper_echo.cc  whisper_params.cc  whisper_params.h
whisper_echo/examples/: CMakeLists.txt  main.cc  whisper_params.cc
whisper_echo/examples/cli/: .gitattributes  CMakeLists.txt  main.cc  whisper_command_line_params.cc  whisper_command_line_params.h
whisper_echo/examples/drogon_websocket_examples/: CMakeLists.txt  chat_client.cc  chat_server.cc
whisper_echo/examples/drogon_websocket_server/: CMakeLists.txt  web_socket_chat.cc
whisper_echo/examples/py_client/: clien.py
whisper_echo/model/: CMakeLists.txt  whisper_context.cc
whisper_echo/utlis/: CMakeLists.txt  id_generator.cc  id_generator.h  id_generator_test.cc  scope_timer.h  singleton.h
whisper_echo/websocket/: CMakeLists.txt  whisper_app.cc  whisper_app.h  whisper_app_model_params.cc  whisper_app_model_params.h  whisper_websocket_controller.cc  whisper_websocket_controller.h
wspserver/examples/: main.cc
